Finish the basic CRUD implementation, would like to unt testing